2011-01-20  John W. Eaton  <jwe@octave.org>

	* faq/OctaveFAQ.texi, interpreter/doccheck/aspell-octave.en.pws,
	interpreter/octave.texi, interpreter/plot.txi: Update for
	backend -> graphics_toolkit change.

	* interpreter/interpimages.m, interpreter/geometryimages.m,
	interpreter/sparseimages.m, interpreter/plotimages.m:
	Call graphics_toolkit, not backend. 

2011-01-19  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/aspell-octave.en.pws: Add new words to Octave
	private dictionary.

2011-01-19  Rik  <octave@nomad.inbox5.com>

	* doc/interpreter/diagperm.txi, doc/interpreter/dynamic.txi,
	doc/interpreter/func.txi, doc/interpreter/install.txi,
	doc/interpreter/intro.txi, doc/interpreter/numbers.txi,
	doc/interpreter/oop.txi, doc/interpreter/plot.txi,
	doc/interpreter/sparse.txi, doc/interpreter/stats.txi: Grammarcheck
	txi files for 3.4 release.

2011-01-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/quad.txi: Add quadcc to documentation.

2011-01-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/expr.txi: Add merge/ifelse function to documentation.

2011-01-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/func.txi, interpreter/intro.txi: Eliminate
	@deffn macros.

2011-01-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/mk_undocumented_list: Update list of exceptions
	not requiring documentation.

2011-01-15  Rik  <octave@nomad.inbox5.com>

	* interpreter/stats.txi: Add stdnormal_xxx functions to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/matrix.txi: Add undocumented postpad to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/octave.texi, interpreter/poly.txi: Add undocumented 
	polyaffine to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/container.txi: Add undocumented nfields to documentation.

2011-01-14  Rik  <octave@nomad.inbox5.com>

	* interpreter/poly.txi: Add undocumented ppder, ppint, ppjumps
	functions to documentation.
