@@ -26,8 +26,8 @@
 ##
 ## The size and numeric class of the output depends on the
 ## format of the image.  A color image is returned as an
-## MxNx3 matrix.  Gray-level and black-and-white images are
-## of size MxN.
+## @nospell{MxNx3} matrix.  Gray-level and black-and-white images are
+## of size @nospell{MxN}.
 ## The color depth of the image determines the numeric
 ## class of the output: "uint8" or "uint16" for gray
 ## and color, and "logical" for black and white.
