@@ -1,3 +1,9 @@
+2011-01-20  Rik  <octave@nomad.inbox5.com>
+
+	* doc/interpreter/doccheck/aspell-octave.en.pws,
+	doc/interpreter/plot.txi: Use @nospell macro on certain words in
+	docstring.
+
 2011-01-20  John W. Eaton  <jwe@octave.org>
 
 	* faq/OctaveFAQ.texi, interpreter/doccheck/aspell-octave.en.pws,
